--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,18 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- <link rel="stylesheet" href="../plugins/jquery-ui-1.11.4/jquery-ui.min.css"> -->
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.js"></script>
+
+    
+    <!-- // <script src="../plugins/jquery-ui-1.11.4/external/jquery/jquery.js"></script> -->
+    <!-- // <script src="../plugins/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+
+
+
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
