--- a/www/index.html
+++ b/www/index.html
@@ -9,15 +9,18 @@
     <link href="lib/ionic/css/custom.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- <link rel="stylesheet" href="../plugins/jquery-ui-1.11.4/jquery-ui.min.css"> -->
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.js"></script>
 
-    
-    <!-- // <script src="../plugins/jquery-ui-1.11.4/external/jquery/jquery.js"></script> -->
-    <!-- // <script src="../plugins/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script> -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+      <!-- jQuery -->
+        <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.4/themes/humanity/jquery-ui.css" />
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css" />
+        <script type="text/javascript" src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+
+
+        <!-- Google charts -->
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 
 
