added cache and imporved rankings page

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/cache.js"></script>
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
