added libraries to repo, cache working

--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
 
 
       <!-- jQuery -->
-        <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.4/themes/humanity/jquery-ui.css">
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.js"></script>
+        <link rel="stylesheet" type="text/css" href="lib/jquery-ui.css">
+        <script type="text/javascript" src="lib/jquery-1.11.3.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css">
