--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,14 @@
       <!-- jQuery -->
         <link rel="stylesheet" type="text/css" href="lib/jquery-ui.css">
         <script type="text/javascript" src="lib/jquery-1.11.3.js"></script>
-        <script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <script type="text/javascript" src="lib/jquery-ui.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css">
-        <script type="text/javascript" src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="lib/jquery.dataTables.min.css">
+        <script type="text/javascript" src="lib/jquery.dataTables.min.js"></script>
 
 
         <!-- Google charts -->
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript" src="lib/loader.js"></script>
         
 
 
