added md5 library

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
 
         <!-- Google charts -->
         <script type="text/javascript" src="lib/loader.js"></script>
+
+        <!-- md5 -->
+        <script type="text/javascript" src="lib/md5.js"></script>
         
 
 
