started work on login

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
 
 
-      <!-- jQuery -->
+      <!-- jQuery library import -->
         <link rel="stylesheet" type="text/css" href="lib/jquery-ui.css">
         <script type="text/javascript" src="lib/jquery-1.11.3.js"></script>
         <script type="text/javascript" src="lib/jquery-ui.js"></script>
@@ -20,10 +20,10 @@
         <script type="text/javascript" src="lib/jquery.dataTables.min.js"></script>
 
 
-        <!-- Google charts -->
+        <!-- Google charts library import -->
         <script type="text/javascript" src="lib/loader.js"></script>
 
-        <!-- md5 -->
+        <!-- md5 library import -->
         <script type="text/javascript" src="lib/md5.js"></script>
         
 
