--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
     <div>
-        <ion-nav-bar class="bar-assertive">
+        <ion-nav-bar class="bar-positive">
             <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
