started work on new charting library

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/ionic/css/angular-chart.css" rel="stylesheet">
     <link href="lib/ionic/css/custom.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
@@ -19,6 +20,12 @@
         <link rel="stylesheet" type="text/css" href="lib/jquery.dataTables.min.css">
         <script type="text/javascript" src="lib/jquery.dataTables.min.js"></script>
 
+
+        <!-- ChartKS charts library import -->
+        <script type="text/javascript" src="lib/Chart.min.js"></script>
+
+        <!-- Angular Wrapper -->
+        <script type="text/javascript" src="lib/angular-chart.min.js"></script> 
 
         <!-- Google charts library import -->
         <script type="text/javascript" src="lib/loader.js"></script>
