split controller into seperate files

--- a/www/index.html
+++ b/www/index.html
@@ -45,11 +45,21 @@
     -->
 
     <script charset="UTF-8" src="js/app.js"></script>
-    <script charset="UTF-8" src="js/controllers.js"></script>
+    <script charset="UTF-8" src="js/module.js"></script>
+    <script charset="UTF-8" src="js/controllers/custommatchctrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/findctrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/loginctrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/matchdatactrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/myprofilectrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/playerprofilesctrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/rankingsctrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/settingsctrl.js"></script>
+    <script charset="UTF-8" src="js/controllers/sidemenuctrl.js"></script>
     <script charset="UTF-8" src="js/routes.js"></script>
     <script charset="UTF-8" src="js/services.js"></script>
     <script charset="UTF-8" src="js/directives.js"></script>
     <script charset="UTF-8" src="js/cache.js"></script>
+    
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
